--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -13,8 +13,8 @@
   <meta property="og:image" content="https://reubenmulholland.com/profile.jpg">
   <meta name="twitter:card" content="summary_large_image">
 
-  <link rel="icon" type="image/png" sizes="32x32" href="favicon.png?v=6">
-  <link rel="icon" type="image/png" sizes="16x16" href="favicon.png?v=6">
+  <link rel="icon" type="image/png" href="favicon.png">
+  <link rel="shortcut icon" type="image/png" href="favicon.png">
 
   <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600&display=swap" rel="stylesheet">
   <link rel="stylesheet" href="style.css" />
@@ -29,8 +29,8 @@
       <div>
         <h1 class="headline">Reuben Mulholland</h1>
         <p class="roles">
-          <span class="roles-sub">ex-Product Manager &nbsp;|&nbsp; Applications Engineer</span><br>
-          <span class="roles-looking">Looking for: Cloud Engineer &nbsp;·&nbsp; DevOps &nbsp;·&nbsp; Solutions Architect</span>
+          <span class="roles-sub">Product Line Manager &nbsp;|&nbsp; Applications Engineer</span><br>
+          <span class="roles-looking">Looking for: Cloud Engineer &nbsp;|&nbsp; DevOps &nbsp;|&nbsp; Solutions Architect</span>
         </p>
         <p class="visitors">Visitors: <span id="replaceme"></span><span id="spinner" class="spinner" style="display:none;"></span></p>
       </div>
