--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -47,13 +47,16 @@
 
   <main class="shell">
     <section class="section">
-      <h3 class="kicker">👋 About This Site</h3>
+      <h3 class="kicker">👋 About This Site, About Me</h3>
       <p>
         This began as the <strong>Cloud Resume Challenge</strong>, where I built my first AWS project: a static site on CloudFront/S3 with HTTPS, a visitor counter API (API Gateway → Lambda → DynamoDB), and IaC with CloudFormation/SAM. 
         It was my first exposure to cloud—and it took persistence to get everything wired securely with no console drift. 
       </p>
       <p>
         I later extended it into a <strong>multi-account AWS setup</strong> (mgmt, eng, test, prod) with <strong>GitHub Actions</strong> CI/CD. The pipeline builds once, promotes the same artifact through environments with approvals, and supports instant rollback. 
+      </p>
+      <p>
+        Alongside the build itself, here’s a little about me: I earned a Master’s in Computer Engineering with a focus in networking and wireless communications, where my first exposure to cloud concepts sparked long-term interest. I began my career as an Applications Engineer (hands-on technical support and SDK feature work) before moving into Product Management, where I honed cross-team communication and delivery skills. Now, after leading products in hardware-driven industries, I’m pivoting back to what excites me most—cloud engineering and DevOps. That mix of technical depth and product leadership lets me bridge between infrastructure, code, and business value, and I’m eager to bring that strength to a team building modern cloud systems.
       </p>
     </section>
 
