--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -47,18 +47,27 @@
 
   <main class="shell">
     <section class="section">
-      <h3 class="kicker">👋 About This Site, About Me</h3>
+      <h3 class="kicker">👋 About the Site & About Me</h3>
       <p>
-        This began as the <strong>Cloud Resume Challenge</strong>, where I built my first AWS project: a static site on CloudFront/S3 with HTTPS, a visitor counter API (API Gateway → Lambda → DynamoDB), and IaC with CloudFormation/SAM. 
-        It was my first exposure to cloud—and it took persistence to get everything wired securely with no console drift. 
+        This began as the <strong>Cloud Resume Challenge</strong>, where I built my first AWS project: a static site on CloudFront/S3 with HTTPS, a visitor counter API (API Gateway → Lambda → DynamoDB), and IaC with CloudFormation/SAM.
+        It was my first exposure to cloud—and it took persistence to get everything wired securely with no console drift.
       </p>
       <p>
-        I later extended it into a <strong>multi-account AWS setup</strong> (mgmt, eng, test, prod) with <strong>GitHub Actions</strong> CI/CD. The pipeline builds once, promotes the same artifact through environments with approvals, and supports instant rollback. 
+        I later extended it into a <strong>multi-account AWS setup</strong> (mgmt, eng, test, prod) with <strong>GitHub Actions</strong> CI/CD. The pipeline builds once, promotes the same artifact through environments with approvals, and supports instant rollback.
       </p>
-      <p>
-        Alongside the build itself, here’s a little about me: I earned a Master’s in Computer Engineering with a focus in networking and wireless communications, where my first exposure to cloud concepts sparked long-term interest. I began my career as an Applications Engineer (hands-on technical support and SDK feature work) before moving into Product Management, where I honed cross-team communication and delivery skills. Now, after leading products in hardware-driven industries, I’m pivoting back to what excites me most—cloud engineering and DevOps. That mix of technical depth and product leadership lets me bridge between infrastructure, code, and business value, and I’m eager to bring that strength to a team building modern cloud systems.
-      </p>
+
+      <div class="about-me">
+        <p class="about-lead"><strong>About me</strong> — a technical builder with product chops, pivoting into cloud/DevOps.</p>
+        <ul class="about-facts">
+          <li><strong>Education:</strong> M.S. in Computer Engineering, Stony Brook University, with an <strong>Advanced Certification in Networking & Wireless Communications</strong>.</li>
+          <li><strong>Technical start:</strong> Applications Engineer at <strong>Data Device Corporation</strong> (hands-on support, SDK feature work).</li>
+          <li><strong>Agile & security:</strong> Product Owner at <strong>Owl Cyber Defense</strong> (cybersecurity; two scrum teams; delivery in a high-assurance environment).</li>
+          <li><strong>Product leadership:</strong> Product Line Manager at <strong>Power Device Corporation</strong> (roadmaps, cross-functional alignment in defense/aerospace).</li>
+          <li><strong>Now:</strong> applying that blend of technical depth and product ownership to <strong>Cloud Engineering / DevOps / Solutions Architecture</strong>.</li>
+        </ul>
+      </div>
     </section>
+
 
     <section class="section">
       <h3 class="kicker">🧩 Projects — Completed & Next</h3>
