--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -30,7 +30,7 @@
       <div>
         <h1 class="headline">Reuben Mulholland</h1>
         <p class="roles">
-          <span class="roles-sub">Product Line Manager &nbsp;|&nbsp; Applications Engineer</span><br>
+          <span class="roles-sub">Experienced: Product Line Manager &nbsp;|&nbsp; Product Owner &nbsp;|&nbsp; Applications Engineer</span><br>
           <span class="roles-looking">Looking for: Cloud Engineer &nbsp;|&nbsp; DevOps &nbsp;|&nbsp; Solutions Architect</span>
         </p>
         <p class="visitors">Visitors: <span id="replaceme"></span><span id="spinner" class="spinner" style="display:none;"></span></p>
@@ -38,10 +38,34 @@
     </div>
 
     <nav aria-label="Primary" class="topnav">
-      <a href="index.html">🏠 Home</a>
-      <a href="resume.html">📄 Resume</a>
-      <a href="https://github.com/zReuben" target="_blank" rel="noopener noreferrer">💻 GitHub</a>
-      <a href="https://www.linkedin.com/in/reubenmulholland" target="_blank" rel="noopener noreferrer">🔗 LinkedIn</a>
+      <a href="index.html" class="home-link" title="Reloads index.html and increments the visitor counter">
+        <!-- Home icon (simple house) -->
+        <svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn">
+          <path d="M12 3.172 3 10v10a1 1 0 0 0 1 1h5v-6h6v6h5a1 1 0 0 0 1-1V10l-9-6.828zM12 1l11 8v11a3 3 0 0 1-3 3h-7v-6H11v6H4a3 3 0 0 1-3-3V9L12 1z"/>
+        </svg>
+        <span>Home</span><em class="pill">API demo</em>
+      </a>
+      <a href="resume.html">
+        <!-- Document icon -->
+        <svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn">
+          <path d="M14 2H6a2 2 0 0 0-2 2v16a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V8l-6-6zm1 7h5l-5-5v5zM8 13h8v2H8v-2zm0 4h8v2H8v-2z"/>
+        </svg>
+        <span>Resume</span>
+      </a>
+      <a href="https://github.com/zReuben" target="_blank" rel="noopener noreferrer">
+        <!-- GitHub mark -->
+        <svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn">
+          <path d="M12 .5a11.5 11.5 0 0 0-3.64 22.42c.58.11.79-.25.79-.55v-2.06c-3.19.7-3.86-1.37-3.86-1.37-.53-1.35-1.3-1.71-1.3-1.71-1.06-.72.08-.71.08-.71 1.17.08 1.78 1.2 1.78 1.2 1.04 1.78 2.72 1.26 3.39.96.11-.76.41-1.26.74-1.55-2.55-.29-5.24-1.28-5.24-5.7 0-1.26.45-2.29 1.19-3.1-.12-.29-.52-1.46.11-3.05 0 0 .97-.31 3.18 1.18.92-.26 1.9-.39 2.88-.4.98.01 1.96.14 2.88.4 2.21-1.49 3.18-1.18 3.18-1.18.63 1.59.23 2.76.11 3.05.74.81 1.19 1.84 1.19 3.1 0 4.43-2.7 5.41-5.26 5.7.42.37.8 1.1.8 2.23v3.3c0 .3.21.67.8.55A11.5 11.5 0 0 0 12 .5z"/>
+        </svg>
+        <span>GitHub</span>
+      </a>
+      <a href="https://www.linkedin.com/in/reubenmulholland" target="_blank" rel="noopener noreferrer">
+        <!-- LinkedIn logo -->
+        <svg viewBox="0 0 24 24" aria-hidden="true" class="nav-icn">
+          <path d="M20.45 20.45h-3.57v-5.6c0-1.34-.02-3.06-1.87-3.06-1.88 0-2.17 1.47-2.17 2.97v5.69H9.28V9.5h3.42v1.49h.05c.48-.9 1.66-1.85 3.42-1.85 3.66 0 4.34 2.41 4.34 5.55v5.76zM5.34 8.01a2.07 2.07 0 1 1 0-4.14 2.07 2.07 0 0 1 0 4.14zM7.12 20.45H3.56V9.5h3.56v10.95z"/>
+        </svg>
+        <span>LinkedIn</span>
+      </a>
     </nav>
   </header>
 
@@ -49,25 +73,15 @@
     <section class="section">
       <h3 class="kicker">👋 About the Site & About Me</h3>
       <p>
-        This began as the <strong>Cloud Resume Challenge</strong>, where I built my first AWS project: a static site on CloudFront/S3 with HTTPS, a visitor counter API (API Gateway → Lambda → DynamoDB), and IaC with CloudFormation/SAM.
-        It was my first exposure to cloud—and it took persistence to get everything wired securely with no console drift.
+        I hold an <strong>AWS Certified Solutions Architect – Associate</strong>, which I earned before starting the <strong>Cloud Resume Challenge</strong> as a foundation for building on AWS. That project became my first end-to-end cloud build: a static site on CloudFront/S3 with HTTPS, a visitor counter API (API Gateway → Lambda → DynamoDB), and fully defined infrastructure as code with CloudFormation/SAM. It was my first exposure to deploying in the cloud, and it took persistence to wire everything securely with no console drift.
       </p>
       <p>
-        I later extended it into a <strong>multi-account AWS setup</strong> (mgmt, eng, test, prod) with <strong>GitHub Actions</strong> CI/CD. The pipeline builds once, promotes the same artifact through environments with approvals, and supports instant rollback.
+        I later extended the project into a <strong>multi-account AWS setup</strong> (mgmt, eng, test, prod) with <strong>GitHub Actions</strong> CI/CD. The pipeline builds once, promotes the same artifact through environments with approvals, and supports instant rollback—mirroring how modern cloud-native teams ship safely into production.
       </p>
-
-      <div class="about-me">
-        <p class="about-lead"><strong>About me</strong> — a technical builder with product chops, pivoting into cloud/DevOps.</p>
-        <ul class="about-facts">
-          <li><strong>Education:</strong> M.S. in Computer Engineering, Stony Brook University, with an <strong>Advanced Certification in Networking & Wireless Communications</strong>.</li>
-          <li><strong>Technical start:</strong> Applications Engineer at <strong>Data Device Corporation</strong> (hands-on support, SDK feature work).</li>
-          <li><strong>Agile & security:</strong> Product Owner at <strong>Owl Cyber Defense</strong> (cybersecurity; two scrum teams; delivery in a high-assurance environment).</li>
-          <li><strong>Product leadership:</strong> Product Line Manager at <strong>Power Device Corporation</strong> (roadmaps, cross-functional alignment in defense/aerospace).</li>
-          <li><strong>Now:</strong> applying that blend of technical depth and product ownership to <strong>Cloud Engineering / DevOps / Solutions Architecture</strong>.</li>
-        </ul>
-      </div>
+      <p>
+        A little about me: I earned my M.S. in Computer Engineering from Stony Brook University, alongside an <strong>Advanced Certification in Networking and Wireless Communications</strong>. I began my career as an Applications Engineer at Data Device Corporation, moved into Product Ownership at <strong>Owl Cyber Defense</strong> (a cybersecurity company where I ran two scrum teams in an agile environment), and most recently served as a Product Line Manager at Power Device Corporation, driving roadmaps in the defense and aerospace sector. That path gave me both technical depth and product leadership experience—but my real passion has always been cloud, which is why I’m pivoting back into engineering roles where I can apply both sides of that background to DevOps, cloud infrastructure, and solutions architecture.
+      </p>
     </section>
-
 
     <section class="section">
       <h3 class="kicker">🧩 Projects — Completed & Next</h3>
