--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -73,10 +73,17 @@
     <section class="section">
       <h3 class="kicker">👋 About the Site & About Me</h3>
       <p>
-        I hold an <strong>AWS Certified Solutions Architect – Associate</strong>, which I earned before starting the <strong>Cloud Resume Challenge</strong> as a foundation for building on AWS. That project became my first end-to-end cloud build: a static site on CloudFront/S3 with HTTPS, a visitor counter API (API Gateway → Lambda → DynamoDB), and fully defined infrastructure as code with CloudFormation/SAM. It was my first exposure to deploying in the cloud, and it took persistence to wire everything securely with no console drift.
+        I hold an <strong>AWS Certified Solutions Architect – Associate</strong>, which I earned before starting the
+        <strong>Cloud Resume Challenge</strong> as a foundation for building on AWS. That project became my first end-to-end
+        cloud build: a static site on CloudFront/S3 with HTTPS, a visitor counter API (API Gateway → Lambda in
+        <strong>Python</strong> using <strong>boto3</strong> → DynamoDB database), and infrastructure fully defined in
+        <strong>SAM/CloudFormation</strong>. Every change is validated with <strong>unit, integration, and end-to-end tests</strong>
+        in <strong>GitHub Actions</strong> before deployment, so nothing ships untested.
       </p>
       <p>
-        I later extended the project into a <strong>multi-account AWS setup</strong> (mgmt, eng, test, prod) with <strong>GitHub Actions</strong> CI/CD. The pipeline builds once, promotes the same artifact through environments with approvals, and supports instant rollback, which mirrors how modern cloud-native teams ship safely into production.
+        I later extended the project into a <strong>multi-account AWS setup</strong> (mgmt, eng, test, prod) with
+        <strong>GitHub Actions</strong> CI/CD. The pipeline builds once, promotes the same artifact through environments
+        with approvals, and supports instant rollback—mirroring how modern cloud-native teams ship safely into production.
       </p>
       <p>
         A little about me: I earned my B.E. & M.S. in Computer Engineering from Stony Brook University, alongside an <strong>Advanced Certification in Networking and Wireless Communications</strong>. I began my career as an Applications Engineer at Data Device Corporation, moved into Product Ownership at <strong>Owl Cyber Defense</strong> (a cybersecurity company where I ran two scrum teams in an agile environment), and most recently served as a Product Line Manager at Power Device Corporation, driving roadmaps in the defense and aerospace sector. That path gave me both technical depth and product leadership experience, but my real passion has always been cloud, which is why I’m pivoting back into engineering roles where I can apply both sides of that background to DevOps, cloud infrastructure, and solutions architecture.
@@ -95,16 +102,22 @@
             Built a static website (HTML/CSS/JS) on CloudFront + S3 (HTTPS via ACM) with a visitor counter backed by a
             RESTful API (API Gateway → Lambda in <strong>Python</strong> using <strong>boto3</strong> → DynamoDB <strong>database</strong>).
             Custom <strong>DNS</strong> is managed in Route 53. All infrastructure is defined as <strong>IaC</strong> with
-            SAM/CloudFormation (<strong>YAML</strong> templates).
+            SAM/CloudFormation (<strong>YAML</strong> templates). 
+          </p>
+          <p>
+            As part of the challenge, I added full test coverage with <strong>unit</strong>, <strong>integration</strong>, and 
+            <strong>end-to-end</strong> tests in <strong>GitHub Actions</strong> (PyTest for Lambda, plus JavaScript E2E).
+            That experience gave me my first exposure to validating infrastructure and application behavior in an automated pipeline.
           </p>
           <div class="badges">
             <span class="badge">HTML</span><span class="badge">CSS</span><span class="badge">JavaScript</span>
             <span class="badge">CloudFront</span><span class="badge">S3</span><span class="badge">DNS</span>
             <span class="badge">Route 53</span><span class="badge">ACM</span>
-            <span class="badge">API Gateway</span><span class="badge">Lambda</span>
-            <span class="badge">Python</span><span class="badge">boto3</span>
-            <span class="badge">DynamoDB</span><span class="badge">Database</span>
+            <span class="badge">API Gateway</span><span class="badge">Lambda</span><span class="badge">Python</span>
+            <span class="badge">boto3</span><span class="badge">DynamoDB</span><span class="badge">Database</span>
             <span class="badge">SAM</span><span class="badge">CloudFormation</span><span class="badge">YAML</span>
+            <span class="badge">PyTest</span><span class="badge">Unit Tests</span>
+            <span class="badge">Integration Tests</span><span class="badge">E2E Tests</span>
           </div>
         </article>
 
@@ -112,14 +125,12 @@
         <article class="card">
           <h4>Multi-Account + CI/CD Promotion</h4>
           <p>
-            Extended into a <strong>multi-account</strong> AWS setup (<em>mgmt / eng / test / prod</em>) under
+            Extended the build into a <strong>multi-account</strong> AWS setup (<em>mgmt / eng / test / prod</em>) under
             <strong>AWS Organizations</strong>, with role assumption via AWS Vault and <strong>MFA</strong>.
             CI/CD runs in <strong>GitHub Actions</strong> (OIDC, no long-lived keys). The pipeline <strong>builds once</strong>
             (SAM → S3 artifact with checksums) and <strong>promotes the same artifact</strong> through environments with
             approvals. Config is centralized in <strong>SSM Parameter Store</strong> (AWS <strong>Systems Manager</strong>) to keep
-            parameters consistent across stages. Test coverage includes <strong>unit</strong>, <strong>integration</strong>, and
-            <strong>end-to-end</strong> runs (<strong>pytest</strong> + JS E2E). Supporting glue handled via
-            lightweight <strong>shell scripts</strong>.
+            parameters consistent across stages. Supporting glue handled via lightweight <strong>shell scripts</strong>.
           </p>
           <div class="badges">
             <span class="badge">AWS Organizations</span><span class="badge">MFA</span>
@@ -128,8 +139,7 @@
             <span class="badge">SAM</span><span class="badge">S3 Artifacts</span><span class="badge">Checksums</span>
             <span class="badge">SSM Parameter Store</span><span class="badge">Systems Manager</span>
             <span class="badge">IaC</span><span class="badge">YAML</span>
-            <span class="badge">Unit Tests</span><span class="badge">Integration Tests</span><span class="badge">E2E Tests</span>
-            <span class="badge">pytest</span><span class="badge">Shell Scripts</span>
+            <span class="badge">Shell Scripts</span>
           </div>
         </article>
       </div>
@@ -172,7 +182,6 @@
         </article>
       </div>
     </section>
-
   </main>
 
   <script>
