Webpage update 28: enhance webpage contents.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -180,6 +180,16 @@
           </div>
         </article>
       </div>
+
+      <h4 class="subkicker">Impact Metrics</h4>
+        <article class="card">
+          <p>
+            0</strong> manual console changes — 100% IaC (SAM/CloudFormation).
+            5-10 min</strong> idea-to-deploy loop via GitHub Actions CI/CD.
+            0</strong> long-lived AWS keys — OIDC only, per-env roles.
+            Safe promotions</strong> — prod uses the exact artifact vetted in test.
+          </p>
+        </article>
     </section>
   </main>
 
