Webpage update 32: enhance webpage contents.

--- a/resume-site/index.html
+++ b/resume-site/index.html
@@ -135,26 +135,14 @@
       </div>
 
       <div class="cards metrics-row">
-        <article class="card metrics-card">
-          <h3>Impact &amp; Metrics</h3>
-            <div class="metrics-grid">
-              <div class="metric">
-                <span class="num">0</span>
-                <span class="label">manual console changes — 100% IaC</span>
-              </div>
-              <div class="metric">
-                <span class="num">10–15&nbsp;min</span>
-                <span class="label">idea → deploy loop via CI/CD</span>
-              </div>
-              <div class="metric">
-                <span class="num">0</span>
-                <span class="label">long-lived AWS keys (OIDC only)</span>
-              </div>
-              <div class="metric">
-                <span class="num">Same artifact</span>
-                <span class="label">promoted ENG → TEST → PROD</span>
-              </div>
-            </div>
+        <article class="card">
+          <h4>Impact &amp; Metrics</h4>
+          <div class="metrics-grid">
+            <div class="metric"><span class="num">0</span><span class="label">manual console changes — 100% IaC</span></div>
+            <div class="metric"><span class="num">10–15 min</span><span class="label">idea → deploy loop via CI/CD</span></div>
+            <div class="metric"><span class="num">0</span><span class="label">long-lived AWS keys (OIDC only)</span></div>
+            <div class="metric"><span class="num">Same artifact</span><span class="label">promoted ENG → TEST → PROD</span></div>
+          </div>
         </article>
       </div>
 
